--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,20 +1,22 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating App</a>
-      <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ |async">
-        <li class="nav-item ">
-          <a class="nav-link" href="#">Matches</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">List</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link ">Messages</a>
-        </li>
+        <a class="navbar-brand" routerLink='/' routerLinkActive="active">Dating App</a>
+      <ul class="navbar-nav mr-auto"  *ngIf="accountService.currentUser$ | async">
+        <ng-container *ngIf="accountService.currentUser$ | async">
+          <li class="nav-item ">
+            <a class="nav-link" routerLink='/members' routerLinkActive="active">Matches</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/lists" routerLinkActive="active">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/messages' routerLinkActive="active">Messages</a>
+          </li>
+        </ng-container>
       </ul>
 
-      <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-          <a class="dropdown-toogle text-light" dropdownToggle>Welcome user</a>
+      <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+          <a class="dropdown-toogle text-light" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item">Edit profile</a>
             <div class="dropdown-divider"></div>
@@ -37,7 +39,7 @@
             class="form-control mr-sm-2" 
             type="password" 
             placeholder="password">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
       </form>
     </div>
     
