End of section 8. Repository pattern . Automapper

--- a/client/src/app/errors/server-error/server-error.component.html
+++ b/client/src/app/errors/server-error/server-error.component.html
@@ -13,3 +13,9 @@
     <p>Following is the stack trace - this is where your investigation should start!</p>
     <code class="mt-5" style="background-color: whitesmoke;">{{error.details}}</code>
 </ng-container>
+<div class="container" mt-5>
+    <div class="position-absolute bottom-5 start-50 translate-middle-x">    
+        <button type="button" class="btn btn-outline-dark" routerLink="/" mt-15>Back to Home Page</button>
+    </div>
+</div>
+
