--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -31,7 +31,7 @@
       <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
           <a class="dropdown-toogle text-light" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
-            <a class="dropdown-item">Edit profile</a>
+            <a class="dropdown-item" routerLink="/member/edit">Edit profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="LogOut()">Log out</a>
           </div>
