--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -29,7 +29,8 @@
           </ng-container>
         </ul>
       <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-          <a class="dropdown-toogle text-light" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
+        <img src="{{user.photoUrl}}" alt="{{user.userName}}">
+          <a class="dropdown-toogle text-light ml-2" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item" routerLink="/member/edit">Edit profile</a>
             <div class="dropdown-divider"></div>
