End of section 12. Client side validation/registration

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ngx-spinner>
-  <h3>Loading...</h3>
+  <p class="mt-5" style="color: white; font-size:xx-large;">Searching your mom ^_^</p>
 </ngx-spinner>
 
 <app-nav>  </app-nav>
