--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -29,7 +29,7 @@
           </ng-container>
         </ul>
       <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-        <img src="{{user.photoUrl}}" alt="{{user.userName}}">
+        <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.userName}}">
           <a class="dropdown-toogle text-light ml-2" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item" routerLink="/member/edit">Edit profile</a>
