End of section 13. Page view, filters,sorting

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ngx-spinner>
-  <p class="mt-5" style="color: white; font-size:xx-large;">Searching your mom ^_^</p>
+  <p class="mt-5" style="color: white; font-size:xx-large;">Searching for hotties ^_^</p>
 </ngx-spinner>
 
 <app-nav>  </app-nav>
