--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,83 @@
+<div class="text-center mt-3">
+    <h2>Your Matches - {{pagination?.totalItems}} found</h2>
+</div>
+
+<div class="container mt-3">
+     <form #form="ngForm" class="form-inline mb-3" 
+            (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="form-group">
+            <label>Age from:
+                <input type="number" class="form-control ml-1"
+                         style="width: 70px;" name="minAge" 
+                         [(ngModel)]="userParams.minAge">
+            </label>
+        </div>
+
+        <div class="form-group px-2">
+            <label>Age to:
+                <input type="number" class="form-control ml-1"
+                         style="width: 70px;" name="maxAge" 
+                         [(ngModel)]="userParams.maxAge">
+            </label>
+        </div>
+
+        <div class="form-group px-2">
+            <label>Show: </label>
+            <select name="gender" style="width: 140px;" [(ngModel)]="userParams.gender" class="form-control ml-1">
+                <option *ngFor="let gender of genderList" [value]="gender.value">
+                    {{gender.display}}
+                </option>
+            </select>
+        </div>
+
+        <button class="btn btn-primary ml-1" type="submit">
+            Search
+        </button>
+
+        <button (click)="resetFilters()" class="btn btn-danger ml-1" type="submit">
+            Reset filters
+        </button>
+        <div class="col">
+        <div class="btn-group float-right">
+            
+            <button class="btn btn-primary" name="orderBy" 
+                type="button"
+                (click)="loadMembers()"
+                btnRadio= "lastActive"
+                [(ngModel)]="userParams.orderBy">
+                Last Active
+            </button>
+
+            <button class="btn btn-primary" name="orderBy" 
+                type="button"
+                (click)="loadMembers()"
+                btnRadio= "created"
+                [(ngModel)]="userParams.orderBy">
+                Newest members
+            </button>
+
+        </div>
+    </div>
+
+    </form>
+</div>
+
 <div class="row">
-    <div  *ngFor="let member of members$ | async" class="col-2">
+    <div *ngFor="let member of members" class="col-2">
         <app-member-card [member]="member"> </app-member-card>
     </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination [boundaryLinks]="true" 
+                [totalItems]="pagination.totalItems"
+                [itemsPerPage]="pagination.itemsPerPage"
+                [(ngModel)]="pagination.currentPage"
+                (pageChanged)="pageChanged($event)" 
+                previousText="⬅️" 
+                nextText="➡️" 
+                firstText="FIRST"
+                lastText="LAST">
+
+    </pagination>
 </div>
