--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -8,12 +8,14 @@
                 </button>
             </li>
             <li class="list-inline-item">
-                <button (click)="addLike(member)" class="btn btn-primary" >
+                <button (click)="addLike(member)" class="btn btn-primary">
                     <i class="fa fa-heart"></i>
                 </button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-primary">
+                <button routerLink="/members/{{member.username}}" 
+                [queryParams]="{tab: 3}"
+                class="btn btn-primary">
                     <i class="fa fa-envelope"></i>
                 </button>
             </li>
