--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -28,7 +28,7 @@
             <th style="width: 20%">Sent / Received</th>
             <th style="width: 20%"></th>
         </tr>
-        <tr *ngFor="let message of messages" routerLink='{{container === "OutBox" 
+        <tr [hidden]="loading" *ngFor="let message of messages" routerLink='{{container === "OutBox" 
         ? "/members/" + message.recepientUserName 
         : "/members/" + message.senderUserName}}' [queryParams]="{tab: 3}">
             <td>{{message.content}}</td>
@@ -48,13 +48,13 @@
             </td>
             <td> {{message.messageSent | timeago }} </td>
             <td>
-                <button class="btn btn-outline-danger">Delete</button>
+                <button (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)" class="btn btn-outline-danger">Delete</button>
             </td>
         </tr>
     </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading">
     <pagination [boundaryLinks]="true" 
                 [totalItems]="pagination.totalItems"
                 [itemsPerPage]="pagination.itemsPerPage"
